--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.45" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.46" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.45" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.45" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.45" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.46" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.46" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.46" media="screen" />
   </head>
 
   <body>
@@ -118,7 +118,7 @@
           :class="{show: appStateIsGettingLast10Games || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
           style="position: relative" class="spinner"></icon>
         <subtitle>
-          <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="blink "
+          <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="blink"
             @click="ToggleShowMeta(event)">Resume</button>
           <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
             The Daily Facet
@@ -130,20 +130,31 @@
             <icon class="empty"></icon>
           </button>
           <button class="small" @click="ToggleShowGlobalCreated(event)">Player puzzles</button>
-          <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
           <leftright>
+            <button class="small" @click="ToggleShowTutorial(event)">How To</button>
             <button class="small" @click="ShowSettings(event)">Settings</button>
-            <button class="small" @click="ToggleShowInfo(event)">Credits</button>
           </leftright>
-          <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
-            <icon class="bmc small highlightBackground"></icon>
-            Buy Me a Coffee!
-          </button>
+          <leftright>
+            <button class="small" @click="ToggleShowInfo(event)">Credits</button>
+            <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
+              <icon class="bmc small highlightBackground"></icon>
+              Donate!
+            </button>
+          </leftright>
         </subtitle>
       </notification>
+      <pointer class="pointer"
+        :class="{hidden: !isGuessingFirstRunShowing, inplay: appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length}"
+        :style="{left: appStatePointoutLocation.x + 'px', top: appStatePointoutLocation.y + 'px'}">
+        <p class="pointer-text" v-html="appDataGuessingFirstRunItems[appStateFirstRunGuessingIndex]"></p>
+        <p class="controls">
+          <a
+            @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length">{{appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length-1 ? 'Stop showing tips' : 'OKAY'}}</a>
+        </p>
+      </pointer>
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
-          <h2>How to play</h2>
+          <h2>How To </h2>
           <p v-if="!appStateShowCreateOOBE && appDataPlayerCurrent.role === 'creator'">A Facets puzzle consists of 4
             different <span class="highlightText">clues</span> that connect 4 different
             <span class="highlightText">word-pairs</span>.
@@ -554,7 +565,7 @@
       </modal>
       <wrapper>
         <controls>
-          <button class="small" @click="ToggleShowMeta(event)">
+          <button class="small" id="menu" @click="ToggleShowMeta(event)">
             Menu
             <badge :class="{show:getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
@@ -610,9 +621,10 @@
             </words>
           </card>
         </ghost>
-        <parking>
-          <spot v-for="(card, index) in appDataCardsParked" v-if="index < (currentGameGuessingCardCount / 2)"
-            :class="{empty: card.words.length === 0, selected: card.isSelected}">
+        <parking v-if="!appStateUsePortraitLayout">
+          <spot :id="'pspot' + index" v-for="(card, index) in appDataCardsParked"
+            v-if="index < (currentGameGuessingCardCount / 2)"
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: getFullCardsInTray.length === 0 && card.words.length !== 0 && appStateFirstRunGuessingIndex === 0 && !appStateIsDragging}">
             <rotators>
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @pointerdown="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -640,10 +652,13 @@
             </rotators>
           </spot>
         </parking>
-        <tray :class="{rotating: appStateTrayIsRotating}" :style="{rotate: appStateTrayRotation * 90 + 'deg'}">
+        <tray id="tray"
+          :class="{rotating: appStateTrayIsRotating, pointout: (appStateFirstRunGuessingIndex === 2 || appStateFirstRunGuessingIndex === 3) && isGuessingFirstRunShowing}"
+          :style=" {rotate: appStateTrayRotation * 90 + 'deg' }">
           <diamond class="back"></diamond>
           <diamond></diamond>
-          <hints>
+          <hints :class="{pointout: appStateFirstRunGuessingIndex === 2 &&
+            isGuessingFirstRunShowing}">
             <hint @pointerdown="RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
               v-for="(hint, index) in appDataHints" :key="index">
               <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false" :id="'hint' + index"
@@ -654,9 +669,10 @@
           </hints>
           <cards :class="{disabled: appStateIsModalShowing}">
             <spot v-for="(card, index) in appDataCards" :id="'spot' + index" v-if="!card.isExtra"
-              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected}">
+              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout:  appStateIsGuessing && !appStateIsDragging && getFullCardsInTray.length === 1 && appStateFirstRunGuessingIndex === 1 && card.words.length > 0}">
               <rotators v-if="appStateIsGuessing && currentGameSolutionGuessing !== currentGameSolutionActual">
-                <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateCard(event, card, 1)">
+                <button :id="'rotator-' + index + '-0'" aria-label="Rotate Tray Clockwise" class="clockwise"
+                  @click="RotateCard(event, card, 1)">
                   <icon class="rotate"></icon>
                 </button>
                 <button aria-label="Rotate Tray Anti-Clockwise" class="anticlockwise"
@@ -683,7 +699,7 @@
             </spot>
           </cards>
         </tray>
-        <parking>
+        <parking v-if="!appStateUsePortraitLayout">
           <spot v-for="(card, index) in appDataCardsParked"
             v-if="index >= (currentGameGuessingCardCount / 2) && (index < currentGameGuessingCardCount)"
             :class="{empty: card.words.length === 0, selected: card.isSelected}">
@@ -715,14 +731,15 @@
           </spot>
         </parking>
       </wrapper>
-      <wrapper class="mobile" :class="{extra: currentGameGuessingCardCount === 5}">
+      <wrapper class="mobile" :class="{extra: currentGameGuessingCardCount === 5}" v-if="appStateUsePortraitLayout">
         <button class="scroller" :class="{disabled: appDataParkingScrollLeft <= 0}"
           @click="ScrollParking(event, 'right')" v-if="vsUseFocus">
           <icon class="chevronleft large"></icon>
         </button>
         <parking id="parking">
-          <spot v-for="(card, index) in appDataCardsParked" v-if="index < currentGameGuessingCardCount"
-            :class="{empty: card.words.length === 0, selected: card.isSelected}">
+          <spot :id="'pspot' + index" v-for="(card, index) in appDataCardsParked"
+            v-if="index < currentGameGuessingCardCount"
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: getFullCardsInTray.length === 0 && appStateIsGuessing && !appStateIsDragging && appStateFirstRunGuessingIndex === 0 && card.words.length !== 0}">
             <rotators v-if="!userSettingsShowAllCards">
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @pointerdown="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -756,15 +773,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.45" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.45" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.45" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.45" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.45" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.45" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.45" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.46" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.46" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.46" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.46" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.46" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.46" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.46" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.45" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.46" type="text/javascript"></script>
   </body>
 
 </html>
