--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.50" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.51" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.50" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.50" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.50" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.51" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.51" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.51" media="screen" />
   </head>
 
   <body>
@@ -143,18 +143,19 @@
           </leftright>
         </subtitle>
       </notification>
-      <pointer class="pointer"
+      <pointer
         :class="{hidden: !isGuessingFirstRunShowing, inplay: appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length}"
-        :style="{left: appStatePointoutLocation.x + 'px', top: appStatePointoutLocation.y + 'px'}">
-        <p class="pointer-text" v-html="appDataGuessingFirstRunItems[appStateFirstRunGuessingIndex]"></p>
+        :style="{left: appStatePointoutLocation.left , top: appStatePointoutLocation.top}">
+        <p class="pointer-text" v-html="pointerText"></p>
         <p class="controls">
           <a
             @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length">{{appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length-1 ? 'Stop showing tips' : 'OKAY'}}</a>
         </p>
-        <arrow v-if="appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1"
-          :style="{marginLeft: appStatePointoutArrowLocation.x + 'px', marginTop: appStatePointoutArrowLocation.y + 'px'}">
-        </arrow>
       </pointer>
+      <arrow
+        :class="{hidden: !isGuessingFirstRunShowing, inplay: appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length}"
+        :style="{left: appStatePointoutArrowLocation.x + 'px', top: appStatePointoutArrowLocation.y + 'px', rotate: appStatePointoutArrowLocation.rotate + 'deg'}">
+      </arrow>
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
           <h2>How To </h2>
@@ -596,8 +597,10 @@
             :class="{show: !appStateShowNotification && vsShowDaily && getDailyIsFreshToday && appStateShowMeta}">Solve
             Today's Facet!</button>
         </header>
-        <controls :class="{disabled: getActionButtonState}">
-          <button id="shareButton" class="inline" @click="HandleSubmitButtonPress()">
+        <controls :class="{disabled: getActionButtonState, pointoutparent: appStateFirstRunGuessingIndex === 4 &&
+          isGuessingFirstRunShowing}">
+          <button id="shareButton" class="inline" :class="{pointout: appStateFirstRunGuessingIndex === 4 &&
+            isGuessingFirstRunShowing}" @click="HandleSubmitButtonPress()">
             <icon :class="{show: appStateIsGettingTinyURL}" class="spinner"></icon>
             <span v-if="!appStateIsGettingTinyURL" v-html="getSubmitButtonText"></span>
           </button>
@@ -609,7 +612,8 @@
             <icon class="rotate"></icon>
           </button>
           <button aria-label="Rotate Tray Anti-Clockwise" class="anticlockwise" @click="RotateTray(-1)">
-            <icon class="rotate"></icon>
+            <icon :class="{pointout: appStateFirstRunGuessingIndex === 3 &&
+              isGuessingFirstRunShowing}" class="rotate"></icon>
           </button>
         </rotators>
         <input autocomplete="off"
@@ -656,7 +660,7 @@
           </spot>
         </parking>
         <tray id="tray"
-          :class="{rotating: appStateTrayIsRotating, pointout: (appStateFirstRunGuessingIndex === 2) && isGuessingFirstRunShowing}"
+          :class="{rotating: appStateTrayIsRotating, pointout: appStateFirstRunGuessingIndex === 2 && isGuessingFirstRunShowing}"
           :style=" {rotate: appStateTrayRotation * 90 + 'deg' }">
           <diamond class="back"></diamond>
           <diamond></diamond>
@@ -684,8 +688,7 @@
               </rotators>
               <card @click="HandleCardClick(event, card)" @pointerup="HandleCardPointerUp(event, card)"
                 @pointerdown="HandleCardPointerDown(event, card)" :style="{rotate: (card.rotation * 90) + 'deg'}"
-                :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped, pointout: appStateFirstRunGuessingIndex === 3 &&
-                  isGuessingFirstRunShowing && index === 2}">
+                :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped}">
                 <words>
                   <word v-for="(word, windex) in card.words" :id="'word' + windex">{{word.value}}</word>
                 </words>
@@ -775,15 +778,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.50" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.50" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.50" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.50" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.50" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.50" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.50" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.51" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.51" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.51" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.51" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.51" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.51" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.51" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.50" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.51" type="text/javascript"></script>
   </body>
 
 </html>
