--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.51" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.52" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,14 +32,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.51" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.51" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.51" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.52" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.52" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.52" media="screen" />
   </head>
 
   <body>
     <app id="app" v-cloak
-      :class="{ai: getIsAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing &&  currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: appDataPlayerCurrent.role === 'creator'}"
+      :class="{ai: getIsAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing &&  currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
       @pointerdown="HandleBodyPointerDown(event)"
       @pointerup="HandleBodyPointerUp(event, appStateIsDragging ? appDataDraggedCard : getSelectedCard)">
       <preload v-if="appStatePageHasLoaded">
@@ -59,8 +59,7 @@
       <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.2.06"
         media="screen" />
       <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.2.06" media="screen" />
-      <link rel="stylesheet"
-        v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
+      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && !isPlayerCreating"
         href="styles/focus.css?2.2.06" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
@@ -143,35 +142,36 @@
           </leftright>
         </subtitle>
       </notification>
-      <pointer
-        :class="{hidden: !isGuessingFirstRunShowing, inplay: appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length}"
-        :style="{left: appStatePointoutLocation.left , top: appStatePointoutLocation.top}">
+      <pointer :class="{hidden: showPointer, inplay: pointerInPlay}"
+        :style="{left: appStatePointerLocation.left + 'px', top: appStatePointerLocation.top + 'px'}">
         <p class="pointer-text" v-html="pointerText"></p>
         <p class="controls">
-          <a
-            @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length">{{appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length-1 ? 'Stop showing tips' : 'OKAY'}}</a>
+          <a v-if="isPlayerGuessing"
+            @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length">{{appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1 ? 'Stop showing tips' : 'OKAY'}}</a>
+          <a v-if="isPlayerCreating"
+            @click="appStateFirstRunCreatingIndex = appDataCreatorFirstRunItems.length">{{appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length - 1 ? 'Stop showing tips' : 'OKAY'}}</a>
         </p>
       </pointer>
       <arrow
-        :class="{hidden: !isGuessingFirstRunShowing, inplay: appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length}"
-        :style="{left: appStatePointoutArrowLocation.x + 'px', top: appStatePointoutArrowLocation.y + 'px', rotate: appStatePointoutArrowLocation.rotate + 'deg'}">
+        :class="{hidden: showPointer, inplay: (appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length && isPlayerGuessing) || (appStateFirstRunCreatingIndex > 0 && appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length && isPlayerCreating)}"
+        :style="{left: appStatePointerArrowLocation.x + 'px', top: appStatePointerArrowLocation.y + 'px', rotate: appStatePointerArrowLocation.rotate + 'deg'}">
       </arrow>
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
           <h2>How To </h2>
-          <p v-if="!appStateShowCreateOOBE && appDataPlayerCurrent.role === 'creator'">A Facets puzzle consists of 4
+          <p v-if="!appStateShowCreateOOBE && isPlayerCreating">A Facets puzzle consists of 4
             different <span class="highlightText">clues</span> that connect 4 different
             <span class="highlightText">word-pairs</span>.
             You can create your own puzzles to send to friends, solve the
             Daily Facet, or guess puzzles your friends create!
           </p>
-          <p v-if="!appStateShowCreateOOBE && appDataPlayerCurrent.role !== 'creator'">A Facets puzzle consists of 4
+          <p v-if="!appStateShowCreateOOBE && !isPlayerCreating">A Facets puzzle consists of 4
             different <span class="highlightText">clues</span> that connect 4 different
             <span class="highlightText">word-pairs</span>.
             You can guess puzzles your friends create, solve the
             Daily Facet, or create your own puzzles to send to friends!
           </p>
-          <hidden v-if="appDataPlayerCurrent.role !== 'creator'">
+          <hidden v-if="!isPlayerCreating">
             <h3>Guessing</h3>
             <p>Find the right word-pairs based on the clues given. Drag cards onto the gem and rotate them until you
               think
@@ -197,7 +197,7 @@
           <p>Click the <cta>{{appDataActionButtonTexts.respond}}</cta> button to send the puzzle back, even if you are
             just giving them the solution.</p>
 
-          <hidden v-if="appDataPlayerCurrent.role === 'creator'">
+          <hidden v-if="isPlayerCreating">
             <h3>Guessing</h3>
             <p>Find the right word-pairs based on the clues given. Drag cards onto the gem and rotate them until you
               think
@@ -403,6 +403,12 @@
             Once you have updated your device settings, restart Facets, and then enable notifications here.
           </instructions> -->
           <leftright style="margin-top: calc(2 * var(--defaultGap))">
+            <a class="padded" @click="ResetFirstRun">Reset
+              tips</a>
+          </leftright>
+          <small>Tap this to restore the game guiding tips.</small>
+
+          <leftright>
             <a class="padded" @click="window.location.reload()">Version {{appDataVersion}}</a>
           </leftright>
           <small>Tap this to be sure that you have the latest version.</small>
@@ -570,7 +576,7 @@
       </modal>
       <wrapper>
         <controls>
-          <button class="small" id="menu" @click="ToggleShowMeta(event)">
+          <button class="small" id="menu" @pointerup="ToggleShowMeta(event)">
             Menu
             <badge :class="{show:getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
@@ -597,10 +603,11 @@
             :class="{show: !appStateShowNotification && vsShowDaily && getDailyIsFreshToday && appStateShowMeta}">Solve
             Today's Facet!</button>
         </header>
-        <controls :class="{disabled: getActionButtonState, pointoutparent: appStateFirstRunGuessingIndex === 4 &&
-          isGuessingFirstRunShowing}">
-          <button id="shareButton" class="inline" :class="{pointout: appStateFirstRunGuessingIndex === 4 &&
-            isGuessingFirstRunShowing}" @click="HandleSubmitButtonPress()">
+        <controls :class="{disabled: getActionButtonState, pointoutparent: (appStateFirstRunGuessingIndex === 4 &&
+          isGuessingFirstRunShowing) || (appStateFirstRunCreatingIndex === 2 && isPlayerCreating)}">
+          <button id="shareButton" class="inline" :class="{pointout: (appStateFirstRunGuessingIndex === 4 &&
+            isPlayerGuessing) || (appStateFirstRunCreatingIndex === 2 && isPlayerCreating)}"
+            @click="HandleSubmitButtonPress()">
             <icon :class="{show: appStateIsGettingTinyURL}" class="spinner"></icon>
             <span v-if="!appStateIsGettingTinyURL" v-html="getSubmitButtonText"></span>
           </button>
@@ -613,7 +620,7 @@
           </button>
           <button aria-label="Rotate Tray Anti-Clockwise" class="anticlockwise" @click="RotateTray(-1)">
             <icon :class="{pointout: appStateFirstRunGuessingIndex === 3 &&
-              isGuessingFirstRunShowing}" class="rotate"></icon>
+              isPlayerGuessing || appStateFirstRunCreatingIndex === 1 && isPlayerCreating}" class="rotate"></icon>
           </button>
         </rotators>
         <input autocomplete="off"
@@ -631,7 +638,7 @@
         </ghost>
         <parking v-if="!appStateUsePortraitLayout">
           <spot v-for="(card, index) in appDataCardsParked" v-if="index < (currentGameGuessingCardCount / 2)"
-            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: index === 0 && getFullCardsInTray.length === 0 && card.words.length !== 0 && appStateFirstRunGuessingIndex === 0 && !appStateIsDragging}">
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: index === 0 && card.words.length !== 0 && appStateFirstRunGuessingIndex === 0 && !appStateIsDragging}">
             <rotators>
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @pointerdown="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -659,15 +666,15 @@
             </rotators>
           </spot>
         </parking>
-        <tray id="tray"
-          :class="{rotating: appStateTrayIsRotating, pointout: appStateFirstRunGuessingIndex === 2 && isGuessingFirstRunShowing}"
+        <tray id="tray" :class="{rotating: appStateTrayIsRotating}"
           :style=" {rotate: appStateTrayRotation * 90 + 'deg' }">
           <diamond class="back"></diamond>
-          <diamond></diamond>
-          <hints :class="{pointout: appStateFirstRunGuessingIndex === 2 &&
-            isGuessingFirstRunShowing}">
-            <hint @pointerdown="RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
-              v-for="(hint, index) in appDataHints" :key="index">
+          <diamond :class="{pointout: (appStateFirstRunCreatingIndex === 0 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 &&
+            isGuessingFirstRunShowing)}"></diamond>
+          <hints>
+            <hint @pointerdown=" RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
+              v-for="(hint, index) in appDataHints" :key="index"
+              :class="{pointout: (appStateFirstRunCreatingIndex === 0 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 && isPlayerGuessing)}">
               <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false" :id="'hint' + index"
                 type="text" title="Please only use alphanumeric characters." pattern="[A-Za-z0-9]*"
                 :disabled="appStateIsGuessing || index > 0" v-model="hint.value" maxlength="14" type="text"
@@ -676,7 +683,7 @@
           </hints>
           <cards :class="{disabled: appStateIsModalShowing}">
             <spot v-for="(card, index) in appDataCards" v-if="!card.isExtra"
-              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout:  appStateIsGuessing && !appStateIsDragging && getFullCardsInTray.length === 1 && appStateFirstRunGuessingIndex === 1 && card.words.length > 0}">
+              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout: appStateIsGuessing && appStateFirstRunGuessingIndex === 1 && card.words.length > 0}">
               <rotators v-if="appStateIsGuessing && currentGameSolutionGuessing !== currentGameSolutionActual">
                 <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateCard(event, card, 1)">
                   <icon class="rotate"></icon>
@@ -744,7 +751,7 @@
         </button>
         <parking id="parking">
           <spot v-for="(card, index) in appDataCardsParked" v-if="index < currentGameGuessingCardCount"
-            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: getFullCardsInTray.length === 0 && appStateIsGuessing && !appStateIsDragging && appStateFirstRunGuessingIndex === 0 && card.words.length !== 0}">
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: appStateIsGuessing && !appStateIsDragging && appStateFirstRunGuessingIndex === 0 && card.words.length !== 0}">
             <rotators v-if="!userSettingsShowAllCards">
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @pointerdown="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -778,15 +785,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.51" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.51" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.51" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.51" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.51" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.51" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.51" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.52" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.52" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.52" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.52" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.52" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.52" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.52" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.51" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.52" type="text/javascript"></script>
   </body>
 
 </html>
